melhorias postumas a resolução na recursão